$Id$

ITG:
- moving it to the 'emth' subproject.

XMLDBS:
- Adding missing return value.

TOL:
- Fixing cast problem.

--------
20010804
--------

GENERAL:
- moving backed-related libraries ('BKDEND', 'BKDxxx' & also 'FRTEND') to 'ebkd' sub-project.
- moving cgi-related libraries and software ('FRTEND', 'URLARG' and 'getbkdapi') to 'ecgi' sub-project.
- Using the g++ 3.0 due to an ICE by gcc 2.95.3
- Removing the obolete 'BRK*' and 'BROKER' libraries. You may use the libraries from the 'ebkd' sub-project.

BCH:
- Adding the 'Init()' function with parameter.

CPE:
- Adding the 'CPE__[NO_]IOS_EXTENSION'

ERR:
- Introducing 'err' namespace due to conflict with content of a g++ 3.0 header.

FIL:
- Make use of the 'CPE__[NO_]IOS_EXTENSION' to handle the 'ios::nocreate' problem.

FLM:
- Make use of the 'CPE__[NO_]IOS_EXTENSION' to handle the 'ios::nocreate' problem.

STF:
- Make changes required by g++ 3.0.

STR:
- Adding the 'Init()' function with parameter.

TSRCPR:
- Changes required by g++ 3.0.

TTR:
- Changes required by g++ 3.0.

TOL:
- Make use of the 'CPE__[NO_]IOS_EXTENSION' to handle the 'ios::nocreate' problem.

XMLCOR:
- Adding the 'Convert()' function.

XMLDBM:
- Using the 'Convert()' from 'XMLCOR' in 'Filter_()'.

XMLDCM:
- Using the 'Convert()' from 'XMLCOR' in 'Filter_()'.

--------
20010618
--------

AEM:
- Adapting to changes in 'TOL'.

BCH:
- Adapting to changes in 'TOL'.

BCKEND:
- Adapting to changes in 'TOL'.

BITBCH
- Adapting to changes in 'TOL'.

BTR:
- Adapting to changes in 'TOL'.

CTN:
- Adapting to changes in 'TOL'.

GNUMLL:
- Adapting to changes in 'TOL'.

MMI:
- Adapting to changes in 'TOL'.

QUE:
- Adapting to changes in 'TOL'.

LST:
- Adapting to changes in 'TOL'.

STR:
- Adapting to changes in 'TOL'.

TAGDTC:
- Adapting to changes in 'TOL'.

TAGEXP:
- Adapting to changes in 'TOL'.

TOL:
- Adding 'TYPEDEF__()'
- Using operator '->' for 'TYPEDEF()' and 'TYPEDEF__()'
- Disable VC++ warning issue due to 'TYPEDEF()'.